# LitaAgent

./: .gitattributes  .gitignore  Agent_tester_.py  Agent_tester_1.py  HRL-X 代理实现与数据收集.md  HRL-X 实现差距分析.md  HRL-X 期货市场适应性重构.md  HRL-X 架构实现与训练方案.md  HRL-X 研究：强化学习问题解决.md  HRL-XF L1&L3&L4层重构方案.md  HRL-XF 实施规范.md  HRL-XF 期货市场代理重构.md  HRL-XF 期货市场适应性重构.md  L1-L4 层设计与离线强化学习.md  LitaAgent-OS_Implementation_Plan.md  LitaAgent-OS设计.md  P_tester_vary_ptoday.py  PenguinAgent 目标与谈判机制.md  README.md  SCML 代理开发技术架构.md  SCML_2025_agent_Y_YS_runner.py  SCML_2025_agent_runner.py  SCML_2025_top_agents_tournament.py  SCML_2025_tourment_runner.py  SCML_quick_test.py  SCML_small_test_tournament.py  Slide.md  Thesis_Draft_0113.en.md  Thesis_Draft_0113.md  agent_config.json  check_tracker.py  diagnose_deep.py  diagnose_exact.py  diagnose_futures.py  diagnose_isolate.py  diagnose_parallel.py  diagnose_parallel_full.py  diagnose_parallel_hang.py  diagnose_progressive.py  diagnose_reproduce.py  (+37 more)
HRL-X历史文档/: HRL-X 实现差距分析.md  HRL-X 架构实现与训练方案.md  HRL-X 研究：强化学习问题解决.md  L1-L4 层设计与离线强化学习.md
diagnose_logs/: goal_distribution_val_test.json  goal_distribution_val_test_nonzero.json  l2_only_cuda_20251231_010729.out  l2_only_cuda_20251231_010729_bs512_20251231_014534.out  l2_only_cuda_20251231_010729_lr1e-4_e50_20251231_103518.out  l2_only_cuda_20251231_010729_lr5e-5_e60_20251231_103518.out  l2_only_cuda_20251231_010729_lr5e-5_e70_20251231_205749.out  l2_qlog1p_w2_20251231_220338.out  l2_qlog1p_w2_lr1e-4_e50_20260104_203711.out  l2_qlog1p_w2_lr5e-5_e60_20260104_203711.out  l2_qlog1p_w2_resume_20260101_205639.out  l2_qp_error_parallel.json  (+14 more)
(+512 files in other folders)
