[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litaagent"
version = "0.1.0"
description = "LitaAgent - SCML 2025 Standard Track Competition Agent"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "LitaAgent Team"}
]
keywords = ["scml", "negmas", "multi-agent", "reinforcement-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "scml>=0.7.0",
    "negmas>=0.10.0",
    "scml-agents>=0.4.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "joblib>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]
hrl = [
    "torch>=2.0.0",
]

[project.scripts]
lita-run = "runners.run_default_std:main"
lita-hrl-data = "runners.hrl_data_runner:main"

[tool.setuptools.packages.find]
include = ["litaagent_std*", "runners*", "scml_analyzer*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
